# toplite

./: .gitignore  .gitmodules  clang.ini  meson.build
src/: main.c  meson.build  util.c  util.h
src/core/: proc_iter.c  proc_iter.h  process.c  process.h  sorting.c  sorting.h  system.c  system.h
src/ui/: color.h  input.c  input.h  render.c  render.h  terminal.c  terminal.h
src/util/: util.c  util.h
